<resources>
    <string name="google_play_services" translatable="false">Google Play Services</string>
    <string name="license_android_open_source" translatable="false">The Android Open Source Project</string>
    <string name="gson" translatable="false">GSON</string>
    <string name="license_google_inc" translatable="false">Copyright © Google Inc.</string>
    <string name="volley" translatable="false">Volley</string>
    <string name="license_volley" translatable="false">Xiaoke Zhang &amp; The Android Open Source Project</string>
    <string name="two_forty_four" translatable="false">Two Forty Four a.m.</string>
    <string name="license_two_forty_four" translatable="false">Copyright © 2012 two forty four a.m. LLC</string>
    <string name="speechutils" translatable="false">Speechutils</string>
    <string name="license_kaarel_kaljurand" translatable="false">Copyright © Kaarel Kaljurand</string>
    <string name="microsoft_translator" translatable="false">Microsoft Translator</string>
    <string name="license_microsoft_translator" translatable="false">Jonathan Griggs</string>
    <string name="apache_commons" translatable="false">Apache Commons</string>
    <string name="license_apache_commons" translatable="false">Copyright © Apache Software Foundation</string>
    <string name="simmetrics" translatable="false">Simmetrics</string>
    <string name="license_simmetrics" translatable="false">Copyright © 2014 - 2016 Simmetrics Authors</string>
    <string name="nuance_speechkit" translatable="false">Nuance Speechkit</string>
    <string name="license_nuance_speechkit" translatable="false">Copyright © Nuance Inc. 2002 Jean-Marc Valin &amp; Wimba S.A</string>
    <string name="guava" translatable="false">Guava</string>
    <string name="license_guava" translatable="false">Copyright © 2011 The Guava Authors</string>
    <string name="microsoft_cognitive" translatable="false">Microsoft Cognitive Services</string>
    <string name="license_microsoft_cognitive" translatable="false">Copyright © Microsoft Corporation</string>
    <string name="api_ai" translatable="false">API AI</string>
    <string name="license_api_ai" translatable="false">Copyright © 2014 Speaktoit, Inc.</string>
    <string name="simple_xml" translatable="false">Simple XML</string>
    <string name="license_simple_xml" translatable="false">Copyright © Niall Gallagher</string>
    <string name="material_icons" translatable="false">Material Design Icons</string>
    <string name="license_material_icons" translatable="false">Copyright © 2014, Austin Andrews</string>
    <string name="material_dialogs" translatable="false">Material Dialogs</string>
    <string name="license_material_dialogs" translatable="false">Copyright © 2014-2016 Aidan Michael Follestad</string>
    <string name="pocketsphinx" translatable="false">Pocketsphinx</string>
    <string name="license_pocketsphinx" translatable="false">Copyright © 2013-2015, Alpha Cephei Inc. All rights reserved.</string>
    <string name="sound_bible" translatable="false">Sound Bible</string>
    <string name="license_sound_bible" translatable="false">Credit Mike Koenig @ Soundbible.com</string>
    <string name="content_disclaimer" translatable="true">here is the application disclaimer.</string>
    <string name="content_developer_note" translatable="true">here is the developer note</string>
    <string name="content_whats_new" translatable="true">here is the what\'s new content</string>
    <string name="content_supported_languages" translatable="true">here is the supported languages text</string>
    <string name="content_unknown_command" translatable="true">When a command is not recognised</string>
    <string name="navigation_drawer_open" translatable="true">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="true">Close navigation drawer</string>
    <string name="app_name" translatable="false">Saiy</string>
    <string name="control_saiy_permission_label" translatable="true">Remotely control Saiy features</string>
    <string name="control_saiy_permission_description" translatable="true">control certain features of Saiy. These features include
        the recording of audio, passing of this speech data to the remote application and varying the type of voice engine used.</string>
    <string name="error_missing_permissions" translatable="true">Your application is missing permission.CONTROL_SAIY</string>
    <string name="tile_label" translatable="true">Saiy Recognition</string>
    <string name="accessibility_description" translatable="true">Read and announce notification content.
        Interact with user input parameters.</string>
    <string name="accessibility_enable" translatable="true">Please enable the Say accessibility service to use
        this feature.</string>
    <string name="error" translatable="true">error</string>
    <string name="enabled" translatable="true">Enabled</string>
    <string name="disabled" translatable="true">Disabled</string>
    <string name="success" translatable="true">success</string>
    <string name="failed" translatable="true">failed</string>
    <string name="chooser_share_via" translatable="true">Share via</string>
    <string name="chooser_email_via" translatable="true">Email via</string>
    <string name="feedback" translatable="true">feedback</string>
    <string name="model" translatable="true">model</string>
    <string name="manufacturer" translatable="true">manufacturer</string>
    <string name="android" translatable="false">Android</string>
    <string name="locale" translatable="false">locale</string>
    <string name="save" translatable="true">save</string>
    <string name="close" translatable="true">close</string>
    <string name="engine" translatable="true">engine</string>
    <string name="ask_repeat" translatable="true">Ask you to repeat</string>
    <string name="state_command_unknown" translatable="true">State command unknown</string>
    <string name="menu_send_to" translatable="true">Send to</string>
    <string name="menu_application_disclaimer" translatable="true">Application Disclaimer</string>
    <string name="menu_developer_note" translatable="true">Developer Note</string>
    <string name="menu_whats_new" translatable="true">"What's New?"</string>
    <string name="menu_accept" translatable="true">Accept</string>
    <string name="menu_uninstall" translatable="true">Uninstall</string>
    <string name="menu_lets_do_it" translatable="true">"Let's do it!"</string>
    <string name="menu_excited" translatable="true">"I'm so excited!!"</string>
    <string name="menu_select" translatable="true">"Select"</string>
    <string name="menu_supported_languages" translatable="true">Supported Languages</string>
    <string name="menu_unknown_commands" translatable="true">Unknown Commands</string>
    <string name="custom_intro_text" translatable="true">How should I address you?</string>
    <string name="custom_intro_hint" translatable="true">I\'m listening your greatness</string>
    <string name="custom_intro_checkbox_title" translatable="true">Use randomly</string>
    <string name="silence" translatable="true">silence</string>
    <string name="male" translatable="true">male</string>
    <string name="female" translatable="true">female</string>
    <string name="clear" translatable="true">clear</string>
    <string name="seconds" translatable="true">seconds</string>
    <string name="second" translatable="true">second</string>
    <string name="minutes" translatable="true">minutes</string>
    <string name="minute" translatable="true">minute</string>
    <string name="text_default" translatable="true">default</string>
    <string name="provider_default" translatable="true">provider default</string>
    <string name="tts_gender_text" translatable="true">Preferred gender when available</string>
    <string name="hotword_intro_text" translatable="true">Select hotword configuration</string>
    <string name="blacklist_intro_text" translatable="true">Select apps to blacklist</string>
    <string name="blacklist_no_apps" translatable="true">Currently, no installed applications can communicate with Saiy</string>
    <string name="menu_not_channel_permanent" translatable="true">"Permanent"</string>
    <string name="menu_not_channel_permanent_description" translatable="true">"Blar"</string>
    <string name="menu_not_channel_interaction" translatable="true">"Interaction"</string>
    <string name="menu_not_channel_interaction_description" translatable="true">"Blar."</string>
    <string name="menu_not_channel_information" translatable="true">"Information"</string>
    <string name="menu_not_channel_information_description" translatable="true">"Blar"</string>
    <string name="menu_not_channel_priority" translatable="true">"Priority"</string>
    <string name="menu_not_channel_priority_description" translatable="true">"Blar"</string>
    <string name="menu_tap_begin" translatable="true">tap to begin</string>
    <string name="menu_tap_view" translatable="true">tap to view</string>
    <string name="menu_tap_topics" translatable="true">tap for topics</string>
    <string name="menu_tap_contribute" translatable="true">tap to contribute</string>
    <string name="menu_tap_create" translatable="true">tap to create</string>
    <string name="menu_tap_options" translatable="true">tap for options</string>
    <string name="menu_tap_toggle" translatable="true">tap to toggle</string>
    <string name="menu_tap_set" translatable="true">tap to set</string>
    <string name="menu_tap_configure" translatable="true">tap to configure</string>
    <string name="menu_tap_tweak" translatable="true">tap to tweak</string>
    <string name="menu_tap_legends" translatable="true">tap for legends</string>
    <string name="menu_tap_send" translatable="true">tap to send</string>
    <string name="menu_tap_help" translatable="true">tap for help</string>
    <string name="title_home" translatable="true">Home</string>
    <string name="title_settings" translatable="true">Settings</string>
    <string name="title_advanced" translatable="true">Advanced</string>
    <string name="title_troubleshooting_bugs" translatable="true">Troubleshooting &amp; Bugs</string>
    <string name="title_troubleshooting" translatable="true">Troubleshooting</string>
    <string name="title_superuser" translatable="true">Superuser</string>
    <string name="title_customisation" translatable="true">Customisation</string>
    <string name="title_about" translatable="true">About</string>
    <string name="title_feedback" translatable="true">Feedback</string>
    <string name="title_communicate" translatable="true">Communicate</string>
    <string name="title_social" translatable="true">Social</string>
    <string name="title_share" translatable="true">Share</string>
    <string name="title_twitter" translatable="true">Twitter</string>
    <string name="title_google_plus" translatable="true">Google+</string>
    <string name="title_forum" translatable="true">Forum</string>
    <string name="action_power" translatable="true">Power</string>
    <string name="menu_voice_tutorial" translatable="true">Voice Tutorial</string>
    <string name="menu_ping" translatable="true">Ping Test Network</string>
    <string name="menu_memory_usage" translatable="true">Memory Usage</string>
    <string name="menu_root" translatable="true">Root Options</string>
    <string name="menu_intercept_google" translatable="true">Intercept Google Now</string>
    <string name="menu_start_boot" translatable="true">Start at Boot</string>
    <string name="menu_start_boot_lower" translatable="true">"Start at boot"</string>
    <string name="menu_start_driving" translatable="true">"Start when driving"</string>
    <string name="menu_run" translatable="true">Run</string>
    <string name="hint_bugs_command" translatable="true">Enter a command to run…</string>
    <string name="ac_button_done" translatable="true">Done button</string>
</resources>