<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016. Saiy Ltd. All Rights Reserved.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as published
  ~ by the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_home_variant"
            android:title="@string/title_home"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_cog"
            android:title="@string/title_settings"/>
        <item
            android:id="@+id/nav_customisation"
            android:icon="@drawable/ic_fingerprint"
            android:title="@string/title_customisation"/>
        <item
            android:id="@+id/nav_advanced_settings"
            android:icon="@drawable/ic_pill"
            android:title="@string/title_advanced"/>
        <item
            android:id="@+id/nav_super_user"
            android:icon="@drawable/ic_linux"
            android:title="@string/title_superuser"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/title_about"/>
    </group>

    <item android:title="@string/title_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/title_share"/>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_thumbs_up_down"
                android:title="@string/title_feedback"/>
        </menu>
    </item>

    <item android:title="@string/title_social">
        <menu>
            <item
                android:id="@+id/nav_twitter"
                android:icon="@drawable/ic_twitter"
                android:title="@string/title_twitter"/>
            <item
                android:id="@+id/nav_google_plus"
                android:icon="@drawable/ic_google_plus"
                android:title="@string/title_google_plus"/>
            <item
                android:id="@+id/nav_forum"
                android:icon="@drawable/ic_forum"
                android:title="@string/title_forum"/>
        </menu>
    </item>

</menu>
