<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016. Saiy Ltd. All Rights Reserved.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as published
  ~ by the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout
    android:id="@+id/layout_bugs_fragment_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ai.saiy.android.ui.activity.ActivityHome">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:duplicateParentState="true"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:orientation="horizontal"
        android:paddingBottom="4dp">

        <EditText
            android:id="@+id/etCommand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_toLeftOf="@+id/ibRun"
            android:layout_toStartOf="@+id/ibRun"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_bugs_command"
            android:imeActionId="@integer/ime_go"
            android:imeActionLabel="@string/menu_run"
            android:imeOptions="actionGo"
            android:inputType="text"
            android:lines="1"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:textColorHint="@color/colorFade"
            android:textSize="14sp"/>


        <ImageButton
            android:id="@+id/ibRun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:contentDescription="@string/ac_button_done"
            android:elevation="4dp"
            android:minHeight="?android:attr/listPreferredItemHeight"
            app:srcCompat="@drawable/ic_function"/>

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/layout_bugs_fragment_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"/>

</LinearLayout>
